<resources>
    <string name="app_name">Insta360App</string>


    <string name="main_toolbar_title">SDK DEMO</string>
    <string name="main_toast_camera_connected">Camera connected</string>
    <string name="main_toast_camera_disconnected">Camera disconnected</string>
    <string name="main_toast_camera_connect_error">Camera connect failed %d</string>
    <string name="main_connect_wifi_button">Connect by WIFI</string>
    <string name="main_disconnect_button">Disconnect by WIFI</string>
    <string name="main_item_desc_connect">Connect/Disconnect Camera</string>
    <string name="main_item_desc_camera_fun">Camera Function -- Need to connect camera first</string>

    <string name="main_capture_button">Capture</string>
    <string name="main_capture_desc">Normal Capture &amp; Record, HDR Capture &amp; Record, Interval Shooting, TimeLapse…</string>

    <string name="stitch_toolbar_title">HDR Stitching</string>
    <string name="stitch_original">Original Effect</string>
    <string name="stitch_hdr">HDR Stitching Effect</string>


    <string name="permission_dialog_title">Permisos necesarios</string>
    <string name="permission_dialog_message">Esta aplicación necesita permisos de almacenamiento y ubicación para funcionar correctamente. Por favor, habilite estos permisos en la configuración de la aplicación.</string>

    <string name="cancel">Cancelar</string>
    <string name="settings">Configuración</string>


    <string name="main_toast_sd_enabled">SD card is enabled</string>
    <string name="main_toast_sd_disabled">SD card may be some error</string>


    <string name="live_toast_bind_mobile_network_successful">Bind mobile network successful</string>
    <string name="live_toast_bind_mobile_network_failed">Bind mobile network failed</string>
    <string name="live_toast_unbind_mobile_network">Unbind mobile network</string>
    <string name="live_toast_unbind_mobile_network_when_lost">Lost mobile network, temporarily unbind</string>



    <string name="capture_toolbar_title">Capture &amp; Listener</string>
    <string name="capture_prompt_nanos_osc">Note: Nanos Camera doesn\'t support the API on this page. You need to use the OSC protocol to control the camera. For details, refer to OscActivity.</string>
    <string name="capture_switch_panorama_sensor">Panorama Sensor</string>
    <string name="capture_switch_front_sensor">Front Sensor</string>
    <string name="capture_switch_rear_sensor">Rear Sensor</string>
    <string name="capture_switch_sensor_ing">Switching Sensor</string>
    <string name="capture_switch_sensor_success">Switch successfully</string>
    <string name="capture_switch_sensor_failed">Switch failed</string>
    <string name="capture_switch_sensor_camera_connect_error">Camera is not connected</string>
    <string name="capture_normal_capture">Normal Capture</string>
    <string name="capture_normal_capture_pure_shot">Normal Capture (PureShot)</string>
    <string name="capture_normal_pano_capture">Insta Pano Mode Normal Capture</string>
    <string name="capture_hdr_capture">HDR Capture</string>
    <string name="capture_hdr_pano_capture">Insta Pano Mode HDR Capture</string>
    <string name="capture_interval_shooting_start">Start Interval Capture</string>
    <string name="capture_interval_shooting_stop">Stop Interval Capture</string>
    <string name="capture_normal_record_start">Start Normal Record</string>
    <string name="capture_normal_record_stop">Stop Normal Record</string>
    <string name="capture_hdr_record_start">Start HDR Record</string>
    <string name="capture_hdr_record_stop">Stop HDR Record</string>
    <string name="capture_timelapse_start">Start TimeLapse</string>
    <string name="capture_timelapse_stop">Stop TimeLapse</string>
    <string name="capture_capture_starting">Capture Starting...</string>
    <string name="capture_capture_working">Capture Working...</string>
    <string name="capture_capture_stopping">Capture Stopping...</string>
    <string name="capture_capture_finished">Capture Finished</string>
    <string name="capture_capture_time">CaptureTime: %s</string>
    <string name="capture_capture_count">Capture Count: %d</string>
    <string name="capture_play_camera_file">Play Camera File</string>
    <string name="capture_play_local_file">Download and Play Local File</string>
    <string name="capture_toast_sd_card_error">No SD card inserted or Not enough free space</string>


    <!-- OSC Activity -->
    <string name="osc_toolbar_title">OSC</string>
    <string name="osc_support_options">Support Options</string>
    <string name="osc_take_picture">Take Picture (HDR)</string>
    <string name="osc_take_picture_device_stitching">Take Picture (HDR)(Device Stitching)</string>
    <string name="osc_start_record">Start Record</string>
    <string name="osc_stop_record">Stop Record</string>
    <string name="osc_get_exposure_params">Get Exposure\nParams</string>
    <string name="osc_switch_front_sensor_capture">Front Sensor\nCapture</string>
    <string name="osc_switch_rear_sensor_capture">Rear Sensor\nCapture</string>
    <string name="osc_separated_fisheye_stitch">Stitch\nTwo Fisheye</string>
    <string name="osc_dialog_title_send_request">Send Request</string>
    <string name="osc_dialog_msg_send_request">Sending request, please wait...</string>
    <string name="osc_dialog_title_success">Successful</string>
    <string name="osc_dialog_msg_no_data">No data returned</string>
    <string name="osc_dialog_title_failed">Failed</string>
    <string name="osc_dialog_title_downloading">Downloading Files</string>
    <string name="osc_dialog_msg_downloading">"Total %1$d, Successful %2$d, Failed %3$d</string>
    <string name="osc_toast_connect_camera">Please connect to camera first</string>
    <string name="osc_toast_get_exposure_params">Please get exposure params first</string>
    <string name="osc_toast_capture_front_sensor">Please take picture with front sensor first</string>
    <string name="osc_toast_capture_rear_sensor">Please take picture with rear sensor first</string>
    <string name="osc_exposure_params">Exposure Params: %s</string>
    <string name="osc_front_path">Front Sensor File Path: %s</string>
    <string name="osc_rear_path">Rear Sensor File Path: %s</string>
    <string name="osc_stitch_path">Stitch Output File Path: %s</string>


</resources>