<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/main_item_desc_connect"
            android:textColor="#444444"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_connect_by_wifi"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/main_connect_wifi_button"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_close_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:text="@string/main_disconnect_button"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/main_item_desc_camera_fun"
            android:textColor="#444444"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:minHeight="64dp"
            android:paddingStart="4dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/btn_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/main_capture_button"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/main_capture_desc" />
        </LinearLayout>


    </LinearLayout>



</androidx.core.widget.NestedScrollView>
